--- a/configuration/config.yaml
+++ b/configuration/config.yaml
@@ -101,23 +101,14 @@ diffexp:
     - 2.5
   # contrasts for the deseq2 results method
   contrasts:
-    WT_00h-vs-WT_96h:
-      - WT_00h
-      - WT_96h
-    WT_48h-vs-WT_00h:
-      - WT_48h
-      - WT_00h
-    WT_96h-vs-WT_48h:
-      - WT_96h
-      - WT_48h
-    WT_96h-vs-WT_00h:
-      - WT_96h
-      - WT_00h
+    I53AD56K_clone25-vs-Parental_K:
+      - I53AD56K_clone25
+      - Parental_K
 
       
 enrichments:
   # Perform or not enrichment analysis. True or False.
-  do: True
+  do: False
   # Use background genes as universe in enrichment analyses. This SHOULD be
   # always used as it will give the most correct p-values. However, to be able to
   # still reproduce the results of the previous version of the pipeline we'll keep
