--- a/workflow/snakemake_profile/config.yaml
+++ b/workflow/snakemake_profile/config.yaml
@@ -3,7 +3,7 @@ cluster-config: "configuration/cluster.json"
 latency-wait: 120
 keep-going: true
 use-singularity: true
-singularity-args: "--bind /hpcnfs"
+singularity-args: "--bind /hpcnfs,/hpcscratch"
 # If you want the default path (.snakeamke/shadow) write ".snakemake" in shadow-prefix.
-shadow-prefix: "/hpcnfs/scratch/temporary/.snakemake_am_rna"
+shadow-prefix: "/hpcscratch/ieo/$USER/.snakemake_am_chip"
 cluster: "qsub -M {cluster.email} -m {cluster.EmailNotice} -N {cluster.jname} -l select=1:ncpus={cluster.cpu}:mem={cluster.MaxMem}gb -o {cluster.output} -e {cluster.error}"
