--- a/configuration/config.yaml
+++ b/configuration/config.yaml
@@ -18,7 +18,8 @@ cluster: configuration/cluster.json
 # Just write the prefix-path where you want to put those files, or write '.' to have them in the workdir.
 # By now just fastq files will be located in this folder
 # IMPORTANT: if you have running multiple snakemake pipelines with the same tmp folder all the fastq files will be located togeter. Care with the sample names to not be repeated.
-tmp: /hpcnfs/scratch/temporary/.snakemake_am_rna
+# IMPORTANT 2: CHANGE THIS PATH WITH YOUR ieoID
+tmp: /hpcscratch/ieo/ieo5776/.snakemake_am_chip
 
 
 # perform trimming: false or true
